Favor wrapping the issues table heads rather than cell contents. References #18

--- a/sass/page_specific/_issues.sass
+++ b/sass/page_specific/_issues.sass
@@ -43,8 +43,12 @@ td div.issue
   // Don't apply massive margins when displayed inside the calendar
   margin: 0
 
+// Issues list table
 tr.issue
   text-align: left
+
+table.issues th
+  white-space: normal
 
 // Issue page
 form
